--- a/App/Form1.resx
+++ b/App/Form1.resx
@@ -780,4 +780,7 @@
         kCBBggQJEiRIkCBBggQJEiRIkOCo8P8b5DMieWervQAAAABJRU5ErkJggg==
 </value>
   </data>
+  <metadata name="dataPath.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>499, 17</value>
+  </metadata>
 </root>
